package com.iluwatar;

/**
 * 
 * View for errors.
 *
 */
public class ErrorView implements View {

	@Override
	public void display() {
		System.out.println("Error 500");
	}
}
